--- a/index.html
+++ b/index.html
@@ -21,63 +21,81 @@
         <div id="intro">
             <div class="container">
                 <h1 class="title text-center">RETROSPECTIVE JAVASCRIPT</h1>
-                <article class="mb-5 mt-5">
-                    <h1 class="text-center pb-3"><i class="fas fa-rocket"></i>Ma fibre Optique <i class="fas fa-rocket"></i></h1>
+                <article class="mb-2 mt-5">
+                    <h1 class="text-center pb-3"><i class="fas fa-rocket"></i>Ma fibre Optique <i
+                            class="fas fa-rocket"></i></h1>
 
                     <div class="row">
                         <div class="col-6">
                             <ol>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Les projets étaient très intéréssants <span class='text-danger'> + + +</span></li>
+                                <li>Travail en autonomie <span class='text-danger'> + +</span></li>
+                                <li>Se remettre sur du HTML/CSS <span class='text-danger'>+</span></li>
+                                <li>Les 3 formateurs au top  <span class='text-danger'>+ + + + + + +</span></li>
+                                <li>La connaissances des autres languages m'ont permis une adaptation facile <span class='text-danger'> + + + + +</span></li>
+                                <li>Tableau Kanban <span class='text-danger'> + + + + +</span></li>
+                                <li>Finaliser sont projet<span class='text-danger'> +</span></li>
+                                <li>Ressources et docs<span class='text-danger'> +</span></li>
+                                <li>Jquery<span class='text-danger'> +</span></li>
+                                <li><span class='text-danger'></span></li>
+
+
+
                             </ol>
                         </div>
                         <div class="col-6">
                             <ol>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Les petits exercices d'entrainement <span class='text-danger'>+ + + +</span></li>
+                                <li>Revoir les basics ( Algo )<span class='text-danger'>+ +</span></li>
+                                <li>Défi personnel<span class='text-danger'></span></li>
+                                <li>Entraide<span class='text-danger'> + +</span></li>
+                                <li>Organisation du cours<span class='text-danger'> + + + + +</span></li>
+                                <li>Netlify<span class='text-danger'> +</span></li>
+                                <li>Création et utilisation d'un API<span class='text-danger'></span></li>
+                                <li>Bonne courbe de progression crescendo<span class='text-danger'> + + +</span></li>
+                                <li>Language intuitif<span class='text-danger'></span></li>
+                                <li><span class='text-danger'></span></li>
+
                             </ol>
                         </div>
 
                     </div>
                 </article>
+            </div>
 
+            <div class="container">
 
                 <section class="background">
 
                     <img src="1lofi.jpg" alt="background">
 
                 </section>
-                <article class="mb-5 mt-5">
-                    <h1 class="text-center pb-3"><i class="fas fa-anchor"></i> Ma Connexion Edge <i class="fas fa-anchor"></i></h1>
+                <article class="mb-5 mt-2">
+                    <h1 class="text-center pb-3"><i class="fas fa-anchor"></i> Ma Connexion Edge <i
+                            class="fas fa-anchor"></i></h1>
                     <div class="row">
                         <div class="col-6">
                             <ol>
-                                <li>Gérard</li>
-                                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius voluptatem delectus
-                                    consequuntur adipisci nostrum incidunt eaque assumenda aut eos hic! Eos ab eveniet,
-                                    accusantium adipisci nam aspernatur reiciendis qui numquam?</li>
-                                <li>htr</li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Pas assez de temps pour aller plus loin <span class='text-danger'>+ + +</span></li>
+                                <li>Trop de distanciel <span class='text-danger'>+ + +</span></li>
+                                <li>Ne pas pouvoir utiliser Bootstrap<span class='text-danger'></span></li>
+                                <li>Syntaxes JS<span class='text-danger'></span></li>
+                                <li>Pas assez de temps pour les premiers exercices<span class='text-danger'> +</span></li>
+                                <li>Manque de lien pour la doc<span class='text-danger'></span></li>
+                                <li>Jquery avant la matrise du DOM ( Perturbant )<span class='text-danger'></span></li>
+
                             </ol>
                         </div>
                         <div class="col-6">
                             <ol>
-                                <li>Le temps</li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>Trop long pour du simple js<span class='text-danger'></span></li>
+                                <li>Confusion entre Vanilla et Jquery<span class='text-danger'> + +</span></li>
+                                <li>Pas eu le temps de faire ma propre API<span class='text-danger'></span></li>
+                                <li>Pas assez de cours sur Jquery<span class='text-danger'></span></li>
+                                <li><span class='text-danger'></span></li>
+                                <li><span class='text-danger'></span></li>
+                                <li><span class='text-danger'></span></li>
+
                             </ol>
                         </div>
 
